# SVD_Gifs

./: .gitignore  Main.hs  README.md  SVDGifs.cabal
