name:                SVDGifs
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             GPL-2
license-file:        LICENSE
author:              Nikhil Unni
maintainer:          nikhilunni@berkeley.edu
-- copyright:           
category:            Graphics
build-type:          Simple
cabal-version:       >=1.8

executable SVDGifs
  main-is:             Main.hs
  build-depends:       base ==4.6.*, JuicyPixels, hmatrix